--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <center>
-            <img src="project889-5e5fdde6c39d7.jpeg" width=50%>
+            <img src="project889-5e5fdde6c39d7.jpeg" width=50% height=50%>
         </center>
     </body>
 </html>
