--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style type="text/css">
+<!--
+body,td,th {
+	color: #FFFFFF;
+}
+body {
+	background-color: #000000;
+}
+.style1 {
+	font-family: sans-serif;
+	font-size: 12px;
+}
+.style3 {
+    font-family: serif;
+    font-size: 18px;
+}
+a:link {
+	color: #CC0000;
+}
+a:visited {
+	color: #CC0000;
+}
+a:hover {
+	color: #FF0000;
+}
+a:active {
+	color: #FFFFFF;
+}
+</style>
     </head>
     <body>
         <center>
             <img src="project889-5e5fdde6c39d7.jpeg" width=50%>
+            <p><span class="style3">
+                <br/>
+                GENE LEMUEL</span><br/>
+<span class="style1"><a href="https://web.archive.org/web/20070707142532/http://www.artpartner.com/" target="_blank">contact Art Partner</a></span></p>
         </center>
     </body>
 </html>
