--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ a:active {
             <p><span class="style3">
                 <br/>
                 GENE LEMUEL</span><br/>
-<span class="style1"><a href="https://web.archive.org/web/20070707142532/http://www.artpartner.com/" target="_blank">contact Art Partner</a></span></p>
+		    <span class="style1"><a href="mailto:info@wearecasey.tv" target="info@wearecasey.tv">contact agent</a></span></p>
         </center>
     </body>
 </html>
