--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <style type="text/css">
 <!--
 body,td,th {
-	color: #FFFFFF;
+	color: #000000;
 }
 body {
-	background-color: #000000;
+	background-color: #FFFFFF;
 }
 .style1 {
 	font-family: sans-serif;
