--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:active {
     </head>
     <body>
         <center>
-            <img src="project889-5e5fdde6c39d7.jpeg" width=50%>
+            <img src="IMG_7915.png" width=25%>
             <p><span class="style3">
                 <br/>
                 GENE LEMUEL</span><br/>
