--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@ a:hover {
 a:active {
 	color: #FFFFFF;
 }
+p {
+  	margin-left: 35px;
+}
 </style>
     </head>
     <body>
         <center>
             <img src="IMG_7915.png" width=25%>
-            <p><span class="style3">
+        </center>
+	    <p><span class="style3">
                 <br/>
                 GENE LEMUEL</span><br/>
 		    <span class="style1"><a href="mailto:info@wearecasey.tv" target="info@wearecasey.tv">contact agent</a></span></p>
-        </center>
     </body>
 </html>
