--- a/index.html
+++ b/index.html
@@ -2,45 +2,15 @@
 <html>
     <head>
         <style type="text/css">
-<!--
-body,td,th {
-	color: #000000;
-}
-body {
-	background-color: #FFFFFF;
-}
-.style1 {
-	font-family: sans-serif;
-	font-size: 12px;
-}
-.style3 {
-    font-family: serif;
-    font-size: 18px;
-}
-a:link {
-	color: #CC0000;
-}
-a:visited {
-	color: #CC0000;
-}
-a:hover {
-	color: #FF0000;
-}
-a:active {
-	color: #FFFFFF;
-}
-p {
-  	margin-left: 35px;
-}
-</style>
+		body {
+			padding: 0;
+			margin: 0;
+		}
+	</style>
     </head>
     <body>
         <center>
-            <img src="IMG_7915.png" width=25%>
+            <img src="IMG_7915.png" width=100%>
         </center>
-	    <p><span class="style3">
-                <br/>
-                GENE LEMUEL</span><br/>
-		    <span class="style1"><a href="mailto:info@wearecasey.tv" target="info@wearecasey.tv">contact agent</a></span></p>
     </body>
 </html>
