--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style type="text/css">
+        <style>
 		body {
+			overflow: auto;
+			height: 100%;
 			padding: 0;
 			margin: 0;
+		}
+		html {
+			overflow: hidden;
+			height: 100%;
 		}
 	</style>
     </head>
