--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html>
     <head>
         <style>
-		body {
-			overflow: auto;
+		html,body {
+			width: 100%;
 			height: 100%;
-			padding: 0;
-			margin: 0;
-		}
-		html {
-			overflow: hidden;
-			height: 100%;
+			margin: 0px;
+			padding: 0px;
+			overflow-x: hidden;
 		}
 	</style>
     </head>
