--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html>
 <html>
-    <head>
+	<head>
         <style>
-		html,body {
-			margin: 0px;
-			padding: 0px;
-		}
-	</style>
+html {
+    overflow: hidden;
+    height: 100%;
+}
+body {
+    margin: 0 auto;
+    overflow: auto;
+    height: 100%;
+background-color: darkred;
+}
+h1 {
+color: white;
+font-family: sans-serif;
+font-size: 72px;
+}</style>
     </head>
     <body>
         <center>
-            <img src="IMG_7915.png" width=100%>
+            <img src="IMG_7915.png" width="100%">
+<h1>GENE LEMUEL</h1>
         </center>
-    </body>
-</html>
+</body></html>
