--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<html>
-	<head>
+<html><head>
         <style>
 html {
     overflow: hidden;
@@ -20,6 +19,10 @@ font-size: 72px;
     <body>
         <center>
             <img src="IMG_7915.png" width="100%">
-<h1>GENE LEMUEL</h1>
+<h1 style="line-height: 35px;">GENE LEMUEL</h1><a style="font-family: monospace; color: white; line-height: 0px" href="mailto:inquiries@humanmadeny.com">contact agent</a>
+<br>
+<br><br><br>
+
         </center>
+
 </body></html>
