--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ font-size: 72px;
     <body>
         <center>
             <img src="IMG_7915.png" width="100%">
-<h1 style="line-height: 35px;">GENE LEMUEL</h1><a style="font-family: monospace; color: white; line-height: 0px" href="mailto:inquiries@humanmadeny.com">contact agent</a>
+<h1 style="line-height: 35px;">GENE LEMUEL</h1><a style="font-family: monospace; color: white; line-height: 0px" href="mailto:anshumalal@genelemuel.com">contact agent</a>
 <br>
 <br><br><br>
 
