--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
-<html><head>
-        <style>
-html {
-    overflow: hidden;
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+html, body {
+    width: 100%;
     height: 100%;
-}
-body {
-    margin: 0 auto;
-    overflow: auto;
-    height: 100%;
-background-color: darkred;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 h1 {
-color: white;
-font-family: sans-serif;
-font-size: 72px;
-}</style>
-    </head>
-    <body>
-        <center>
-            <img src="IMG_7915.png" width="100%">
-<h1 style="line-height: 35px;">GENE LEMUEL</h1><a style="font-family: monospace; color: white; line-height: 0px" href="mailto:anshumalal@genelemuel.com">contact agent</a>
-<br>
-<br><br><br>
-
-        </center>
-
-</body></html>
+	color: white;
+	font-family: sans-serif;
+	font-size: 72px;
+}
+</style>
+</head>
+<body>
+<h1 style="position: fixed;">GENE LEMUEL</h1>
+<img src="https://www.genelemuel.com/IMG_7915.png" width="100%">
+</body>
+</html>
