--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ h1 {
 </head>
 <body>
 <h1 style="position: fixed;">GENE LEMUEL</h1>
-<img src="https://www.genelemuel.com/IMG_7915.png" width="100%">
+<img src="IMG_7915.png" width="100%">
 </body>
 </html>
