--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h1 {
 </style>
 </head>
 <body>
-<h1 style="position: fixed;">GENE LEMUEL</h1>
+<h1 style="position: fixed;"><a style="color: white; text-decoration: none;" href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
 <img src="IMG_7915.png" width="100%">
 </body>
 </html>
