--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 <style>
 html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
+	overscroll-behavior: none;
 }
 h1 {
 	color: white;
