--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -14,10 +13,23 @@ h1 {
 	font-family: sans-serif;
 	font-size: 72px;
 }
+a {
+ 	color: white; 
+	text-decoration: none;
+}
+a:visited {
+	color: darkred;
+}
+a:hover {
+	color: darkred;
+}
+a:active {
+	color: darkred;
+}
 </style>
 </head>
 <body>
-<h1 style="position: fixed;"><a style="color: white; text-decoration: none;" href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
-<img src="IMG_7915.png" width="100%">
+<h1 style="position: fixed;"><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
+<img src="https://www.genelemuel.com/IMG_7915.png" width="100%">
 </body>
 </html>
