--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@ h1 {
 	font-family: sans-serif;
 	font-size: 72px;
 }
+h2 {
+	color: white;
+	font-family: sans-serif;
+	font-size: 48px;
+	line-height: 12px;
+}
 a {
  	color: white; 
 	text-decoration: none;
@@ -26,10 +32,17 @@ a:hover {
 a:active {
 	color: darkred;
 }
+.myDiv {
+  position: fixed;
+}
 </style>
 </head>
 <body>
-<h1 style="position: fixed;"><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
-<img src="https://www.genelemuel.com/IMG_7915.png" width="100%">
+<div class="myDiv">
+  <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
+  <h2>I SHOOT FILM</h2>
+  <h2>I SHOOT WOMEN</h2>
+</div>
+<img src="IMG_7915.png" width="100%">
 </body>
 </html>
