--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ a:active {
 </head>
 <body>
 <div class="myDiv">
-  <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
-  <h2>I SHOOT FILM</h2>
-  <h2>I SHOOT WOMEN</h2>
+<h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
+<h2>I SHOOT FILM</h2>
+<h2>I SHOOT WOMEN</h2>
 </div>
-<img src="IMG_7915.png" width="100%">
+<img src="IMG_7915.png" style="width: 100%; position: absolute; z-index: -1;">
 </body>
 </html>
