--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ a:active {
 <div class="myDiv">
 <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
 <h2>I SHOOT FILM</h2>
-<h2>I SHOOT WOMEN</h2>
+<h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
 </div>
 <img src="IMG_7915.png" style="width: 100%; position: absolute; z-index: -1;">
 </body>
