--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:active {
 </style>
 </head>
 <body>
-<div class="myDiv">
+<div class="myDiv" style="left: 4vw">
 <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
 <h2>I SHOOT FILM</h2>
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
