--- a/index.html
+++ b/index.html
@@ -37,13 +37,36 @@ a:active {
   position: fixed;
 }
 </style>
+<script type="text/javascript">
+            var picPaths = ['IMG_7915.png','HQ HEADQUARTERS - NYC627.jpg'];
+            var curPic = -1;
+            //preload the images for smooth animation
+            var imgO = new Array();
+            for(i=0; i < picPaths.length; i++) {
+                imgO[i] = new Image();
+                imgO[i].src = picPaths[i];
+            }
+
+            function swapImage() {
+                curPic = (++curPic > picPaths.length-1)? 0 : curPic;
+                imgCont.src = imgO[curPic].src;
+                setTimeout(swapImage,5000);
+            }
+
+            window.onload=function() {
+                imgCont = document.getElementById('imgBanner');
+                swapImage();
+            }
+        </script>
 </head>
 <body>
-<div class="myDiv" style="left: 4vw">
+<div class="myDiv" style="left: 2vw">
 <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
 <h2>I SHOOT FILM</h2>
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
 </div>
-<img src="IMG_7915.png" style="width: 100%; position: absolute; z-index: -1;">
+<div>
+<img id="imgBanner" src="" alt="" style="width: 100%; position: absolute; z-index: -1;"/>
+</div>
 </body>
 </html>
