--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@ a:active {
 .myDiv {
   position: fixed;
 }
+.stickerDiv {
+  background-color: yellow;
+  width: 150px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+p {
+text-align:center;
+font-family: sans-serif;
+font-weight: bold;
+}
 </style>
 <script type="text/javascript">
             var picPaths = ['IMG_7915.png','HQ HEADQUARTERS - NYC627.jpg'];
@@ -64,9 +78,9 @@ a:active {
 <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
 <h2>I SHOOT FILM</h2>
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
-</div>
+</div><a href="mailto:anshumalal@genelemuel.com" style="color: black"><div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
 <div>
-<img id="imgBanner" src="" alt="" style="width: 100%; position: absolute; z-index: -1;"/>
+<img id="imgBanner" src="https://www.genelemuel.com/HQ%20HEADQUARTERS%20-%20NYC627.jpg" alt="" style="width: 100%; position: absolute; z-index: -1;">
 </div>
 </body>
 </html>
