--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ a:active {
   padding-top: 25px;
   padding-bottom: 25px;
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 2vw;
+  right: 2vw;
 }
 p {
 text-align:center;
