--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="preload" as="image" href="IMG_7915.png">
-<link rel="preload" as="image" href="HQ HEADQUARTERS - NYC627.jpg">
+<link rel="preload" as="image" href="ESO201.jpg">
 <style>
 html, body {
 	width: 100%;
