--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ font-weight: bold;
 }
 </style>
 <script type="text/javascript">
-            var picPaths = ['IMG_7915.png','HQ HEADQUARTERS - NYC627.jpg'];
+            var picPaths = ['IMG_7915.png','ESO201.jpg'];
             var curPic = -1;
             //preload the images for smooth animation
             var imgO = new Array();
