--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ font-weight: bold;
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
 </div><a href="mailto:anshumalal@genelemuel.com" style="color: black"><div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
 <div>
-<img id="imgBanner" src="https://www.genelemuel.com/HQ%20HEADQUARTERS%20-%20NYC627.jpg" alt="" style="width: 100%; position: absolute; z-index: -1;">
+<img id="imgBanner" src="" alt="" style="width: 100%; position: absolute; z-index: -1;">
 </div>
 </body>
 </html>
