--- a/index.html
+++ b/index.html
@@ -36,21 +36,24 @@ a:active {
 	color: darkred;
 }
 .myDiv {
-  position: fixed;
+	position: fixed;
 }
 .stickerDiv {
-  background-color: yellow;
-  width: 150px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  position: fixed;
-  bottom: 2vw;
-  right: 2vw;
+	background-color: yellow;
+	width: 150px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	position: fixed;
+	bottom: 2vw;
+	right: 2vw;
 }
 p {
-text-align:center;
-font-family: sans-serif;
-font-weight: bold;
+	text-align:center;
+	font-family: sans-serif;
+	font-weight: bold;
+}
+img {
+	pointer-events: none;
 }
 </style>
 <script type="text/javascript">
