--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ html, body {
 	overscroll-behavior-y: none;
 }
 h1 {
-	color: white;
+	color: AntiqueWhite;
 	font-family: sans-serif;
 	font-size: 72px;
 }
 h2 {
-	color: white;
+	color: AntiqueWhite;
 	font-family: sans-serif;
 	font-size: 48px;
 	line-height: 12px;
