--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ img {
 <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
 <h2>I SHOOT FILM</h2>
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
-</div><a href="mailto:anshumalal@genelemuel.com" style="color: black"><div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
+</div><a href="https://www.genelemuel.com/contact" style="color: black"><div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
 <div>
 <img id="imgBanner" src="" alt="" style="width: 100%; position: absolute; z-index: -1;">
 </div>
