--- a/contact/index.html
+++ b/contact/index.html
@@ -22,17 +22,17 @@ h2 {
 	line-height: 12px;
 }
 a {
- 	color: darkred; 
+ 	color: yellow; 
 	text-decoration: none;
 }
 a:visited {
-	color: darkred;
+	color: yellow;
 }
 a:hover {
-	color: darkred;
+	color: yellow;
 }
 a:active {
-	color: darkred;
+	color: yellow;
 }
 .myDiv {
 	position: fixed;
@@ -49,6 +49,7 @@ img {
 </head>
 <body>
 <div class="myDiv" style="left: 2vw">
+<h2><a href="mailto:anshumalal@genelemuel.com">ANSHUMALAL@GENELEMUEL.COM</a></h2>
 </div>
 <div>
 <img id="imgBanner" src="IMG_9111.png" alt="" style="width: 100%; position: absolute; z-index: -1;">
