--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ html, body {
 	overscroll-behavior-y: none;
 }
 h1 {
+	color: white;
 	color: AntiqueWhite;
 	font-family: sans-serif;
 	font-size: 72px;
 }
 h2 {
+	color: white;
 	color: AntiqueWhite;
 	font-family: sans-serif;
 	font-size: 48px;
@@ -65,13 +67,11 @@ img {
                 imgO[i] = new Image();
                 imgO[i].src = picPaths[i];
             }
-
             function swapImage() {
                 curPic = (++curPic > picPaths.length-1)? 0 : curPic;
                 imgCont.src = imgO[curPic].src;
                 setTimeout(swapImage,5000);
             }
-
             window.onload=function() {
                 imgCont = document.getElementById('imgBanner');
                 swapImage();
@@ -83,7 +83,7 @@ img {
 <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
 <h2>I SHOOT FILM</h2>
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
-</div><a href="https://www.genelemuel.com/contact" style="color: black"><div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
+</div><a href="mailto:anshumalal@genelemuel.com" style="color: black"><div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
 <div>
 <img id="imgBanner" src="" alt="" style="width: 100%; position: absolute; z-index: -1;">
 </div>
