--- a/index.html
+++ b/index.html
@@ -60,7 +60,24 @@ img {
   left: 500px;
   -webkit-animation: slideIn 2s forwards;
   -moz-animation: slideIn 2s forwards;
+  animation: slideIn 2s forwards; 
+  animation-delay: 500ms;
+}
+.slide2Div {
+  position: relative;
+  left: 500px;
+  -webkit-animation: slideIn 2s forwards;
+  -moz-animation: slideIn 2s forwards;
   animation: slideIn 2s forwards;
+  animation-delay: 1s;
+}
+.slide3Div {
+  position: relative;
+  left: 500px;
+  -webkit-animation: slideIn 2s forwards;
+  -moz-animation: slideIn 2s forwards;
+  animation: slideIn 2s forwards;
+  animation-delay: 1.5s;
 }
 @-webkit-keyframes slideIn {
   0% {
@@ -111,9 +128,14 @@ img {
 <div class="myDiv" style="left: 2vw">
 <div class="slideDiv">
 <h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
+</div>
+<div class="slide2Div">
 <h2>I SHOOT FILM</h2>
+</div>
+<div class="slide3Div">
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
-</div></div>
+</div>
+</div>
 <a href="mailto:anshumalal@genelemuel.com" style="color: black">
 <div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
 <div>
