--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ img {
 <h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
 </div>
 </div>
-<a href="mailto:anshumalal@genelemuel.com" style="color: black">
+<a href="mailto:genelemuel@gmail.com" style="color: black">
 <div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
 <div>
 </div>
