--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 <link rel="preload" as="image" href="IMG_7915.png">
 <link rel="preload" as="image" href="ESO201.jpg">
+<link rel="preload" as="image" href="4493083e-338d-4241-8868-e3cc24970d6a.png">
+<link rel="preload" as="image" href="ceb7b626-c0a2-4975-b97b-4e6480d8d41d.png">
 <style>
 html, body {
 	width: 100%;
@@ -105,7 +107,7 @@ img {
 }
 </style>
 <script type="text/javascript">
-            var picPaths = ['IMG_7915.png','ESO201.jpg'];
+            var picPaths = ['IMG_7915.png','ESO201.jpg', '4493083e-338d-4241-8868-e3cc24970d6a.png', 'ceb7b626-c0a2-4975-b97b-4e6480d8d41d.png'];
             var curPic = -1;
             //preload the images for smooth animation
             var imgO = new Array();
