--- a/index.html
+++ b/index.html
@@ -1,147 +1,129 @@
+<!DOCTYPE html>
 <html>
 <head>
-<link rel="preload" as="image" href="IMG_7915.png">
-<link rel="preload" as="image" href="ESO201.jpg">
-<link rel="preload" as="image" href="4493083e-338d-4241-8868-e3cc24970d6a.png">
-<link rel="preload" as="image" href="ceb7b626-c0a2-4975-b97b-4e6480d8d41d.png">
-<style>
-html, body {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
-	overscroll-behavior-x: none;
-	overscroll-behavior-y: none;
-}
-h1 {
-	color: AntiqueWhite;
-	font-family: sans-serif;
-	font-size: 72px;
-}
-h2 {
-	color: AntiqueWhite;
-	font-family: sans-serif;
-	font-size: 48px;
-	line-height: 12px;
-}
-a {
- 	color: darkred; 
-	text-decoration: none;
-}
-a:visited {
-	color: darkred;
-}
-a:hover {
-	color: darkred;
-}
-a:active {
-	color: darkred;
-}
-.myDiv {
-	position: fixed;
-}
-.stickerDiv {
-	background-color: yellow;
-	width: 150px;
-	padding-top: 25px;
-	padding-bottom: 25px;
-	position: fixed;
-	bottom: 2vw;
-	right: 2vw;
-}
-p {
-	text-align:center;
-	font-family: sans-serif;
-	font-weight: bold;
-}
-img {
-	pointer-events: none;
-}
-.slideDiv {
-  position: relative;
-  left: -900px;
-  -webkit-animation: slideIn 1s forwards;
-  -moz-animation: slideIn 1s forwards;
-  animation: slideIn 1s forwards; 
-  animation-delay: 500ms;
-}
-.slide2Div {
-  position: relative;
-  left: -900px;
-  -webkit-animation: slideIn 1s forwards;
-  -moz-animation: slideIn 1s forwards;
-  animation: slideIn 1s forwards;
-  animation-delay: 1s;
-}
-.slide3Div {
-  position: relative;
-  left: -900px;
-  -webkit-animation: slideIn 1s forwards;
-  -moz-animation: slideIn 1s forwards;
-  animation: slideIn 1s forwards;
-  animation-delay: 1.5s;
-}
-@-webkit-keyframes slideIn {
-  0% {
-    transform: translateX(0px);
-  }
-  100% {
-    transform: translateX(900px);
-  }
-}
-@-moz-keyframes slideIn {
-  0% {
-    transform: translateX(0px);
-  }
-  100% {
-    transform: translateX(900px);
-  }
-}
-@keyframes slideIn {
-  0% {
-    transform: translateX(0px);
-  }
-  100% {
-    transform: translateX(900px);
-  }
-}
-</style>
-<script type="text/javascript">
-            var picPaths = ['IMG_7915.png','ESO201.jpg', '4493083e-338d-4241-8868-e3cc24970d6a.png', 'ceb7b626-c0a2-4975-b97b-4e6480d8d41d.png'];
-            var curPic = -1;
-            //preload the images for smooth animation
-            var imgO = new Array();
-            for(i=0; i < picPaths.length; i++) {
-                imgO[i] = new Image();
-                imgO[i].src = picPaths[i];
-            }
-            function swapImage() {
-                curPic = (++curPic > picPaths.length-1)? 0 : curPic;
-                imgCont.src = imgO[curPic].src;
-                setTimeout(swapImage,5000);
-            }
-            window.onload=function() {
-                imgCont = document.getElementById('imgBanner');
-                swapImage();
-            }
-        </script>
+  <meta charset="UTF-8" />
+  <title>Gene Lemuel</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    html, body {
+      width: 100%;
+      min-height: 100%;
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+    }
+
+    body {
+      background-color: #000;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
+      color: #fff;
+    }
+
+    .page {
+      min-height: 100vh;
+      display: flex;
+      align-items: flex-start;
+      justify-content: flex-end;
+      padding: 40px 40px 40px 260px; /* left padding makes room for fixed text */
+      gap: 40px;
+      background-color: #000;
+    }
+
+    .block {
+      line-height: 1.4;
+      flex: 0 0 auto;
+      position: fixed;
+      top: 40px;
+      left: 40px;
+    }
+
+    .name {
+      font-size: 26px;
+      font-weight: 700;
+      margin-bottom: 24px;
+    }
+
+    .agent-link {
+      font-size: 18px;
+    }
+
+    .agent-link a {
+      color: #c30000;
+      text-decoration: underline;
+      font-family: serif;
+    }
+
+    .agent-link a:visited {
+      color: #c30000;
+      font-family: serif;
+    }
+
+    .gallery {
+      flex: 1 1 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 16px;
+      max-width: 50vw;
+      background-color: #000;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: auto;
+      display: block;
+      background-color: #000;
+    }
+
+    @media (max-width: 768px) {
+      .page {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 24px;
+      }
+
+      .block {
+        position: static;
+        margin-bottom: 24px;
+      }
+
+      .gallery {
+        max-width: 100%;
+        align-items: flex-start;
+      }
+
+      .gallery img {
+        width: 100%;
+      }
+    }
+
+      .gallery {
+        max-width: 100%;
+        align-items: flex-start;
+      }
+
+      .gallery img {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
-<img id="imgBanner" src="" alt="" style="width: 100%; position: absolute; z-index: -1;">
-<div class="myDiv" style="left: 2vw">
-<div class="slideDiv">
-<h1><a href="https://www.genelemuel.com/">GENE LEMUEL</a></h1>
-</div>
-<div class="slide2Div">
-<h2>I SHOOT FILM</h2>
-</div>
-<div class="slide3Div">
-<h2>I SHOOT <p style="color:darkred; display:inline;">STRONG </p>WOMEN</h2>
-</div>
-</div>
-<a href="mailto:genelemuel@gmail.com" style="color: black">
-<div class="stickerDiv"><p>CONTACT</p><p>AGENT</p></div></a>
-<div>
-</div>
+  <div class="page">
+    <div class="block">
+      <div class="name">GENE LEMUEL</div>
+      <div class="agent-link" style="font-size:18px;"><a href="mailto:genelemuel@gmail.com">Contact Agent</a></div>
+    </div>
+    <div class="gallery">
+      <img src="https://raw.githubusercontent.com/genelemuel/genelemuel.github.io/refs/heads/main/work/IMG_9530.png" alt="Gene Lemuel work 1" />
+      <img src="https://genelemuel.com/4493083e-338d-4241-8868-e3cc24970d6a.png" alt="Gene Lemuel work 2" />
+      <img src="https://genelemuel.com/IMG_7915.png" alt="Gene Lemuel work 3" />
+      <img src="https://genelemuel.com/ceb7b626-c0a2-4975-b97b-4e6480d8d41d.png" alt="Gene Lemuel work 4" />
+      <img src="https://genelemuel.com/ESO201.jpg" alt="Gene Lemuel work 5" />
+    </div>
+  </div>
 </body>
 </html>
