--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
     .gallery img {
       width: 100%;
       height: auto;
+      max-height: 100vh;
+      object-fit: contain;
       display: block;
       background-color: #000;
     }
