--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
       html,
       body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
         color: var(--fg);
       }
 
@@ -65,9 +64,14 @@
 
       .agent-link a {
         color: var(--accent);
-        text-decoration: underline;
+        text-decoration: none;
         border-bottom: 1px solid var(--soft-border);
         padding-bottom: 2px;
+      }
+
+      .agent-link a:hover,
+      .agent-link a:focus {
+        border-bottom-color: var(--accent);
       }
 
       /* Right-hand image column, nudged slightly right */
