--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
       html,
       body {
+        /* body inherits font from html/body; keep serif only for .agent-link */
         color: var(--fg);
+      } var(--fg);
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
       }
 
       body {
@@ -64,14 +67,9 @@
 
       .agent-link a {
         color: var(--accent);
-        text-decoration: none;
+        text-decoration: underline;
         border-bottom: 1px solid var(--soft-border);
         padding-bottom: 2px;
-      }
-
-      .agent-link a:hover,
-      .agent-link a:focus {
-        border-bottom-color: var(--accent);
       }
 
       /* Right-hand image column, nudged slightly right */
