--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
     min-height: 100%;
     background-color: var(--bg);
     color: var(--fg);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue",
-      Arial, sans-serif;
-  }
-
-  body {
-    /* body inherits sans-serif; serif is only for .agent-link */
+    font-family: Arial, sans-serif;
   }
 
   /* Layout
@@ -63,7 +58,7 @@
   .agent-link {
     font-size: 16px;
     letter-spacing: 0.01em;
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Times New Roman", serif;
     text-transform: none;
   }
 
